# yt-dlp-music-player

./: .gitignore  Cargo.toml  README.md  config.json  config.toml
.github/workflows/: build.yml
src/: config.rs  main.rs  player.rs  playlist.rs  song.rs
src/loudness_normalization/: mod.rs  rms.rs
src/media_controls/: mod.rs  windows.rs
